small format changes and merges

--- a/app/assets/stylesheets/styles-8.css.scss
+++ b/app/assets/stylesheets/styles-8.css.scss
@@ -628,6 +628,10 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     margin-right: auto !important;
     margin-top: 86.5% !important;
 }
+.mask-orange{
+    background:#F5B133 !important;
+}
+
 .yelp-mask-header {
     width: 255px !important;
     bottom: 0px !important;
