--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -3,8 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .user-pic{
-  padding-top: 50px;
-  width: 45%;
+  padding-top: 40px;
+  width: 40%;
+  padding-bottom:100px;
   /*padding-right: 20px;*/
 }
 
