fixed ajax on show page by adding the id back to the project article div

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -91,7 +91,7 @@ START PROJECTS ITEM
 
   <% @user.all_projects.each do |project| %>
 
-    <article class= "project-item" style='float:left' >
+    <article class= "project-item" style='float:left' data-id="<%= project.id %>" >
       <% if @language_logos.include?(project.language.downcase) %>
         <img class="img-responsive project-image project-language" src='/assets/<%= project.language.downcase %>.png'>
       <% else %>
