change google url from http to https

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -165,7 +165,7 @@ START MAP
   <div id="gmap"></div>
 </section>  
 
-<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
 <% if current_user && @curr_user.zipcode != @user.zipcode%>
   <script>
 
