--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -78,7 +78,7 @@
   <div id="gmap"></div>
 </section>  
 
-<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
 
 <% if current_user && current_user.zipcode %>
   <script>
