add our community button that links to all users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     
     <div id="site-nav" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "ABOUT", about_path()%></li>
+        <li><%= link_to "OUR COMMUNITY", searches_path()%></li>
         <li><%= link_to "CONTACT", contact_path()%></li>
         <% if logged_in? %>
           <li><%= link_to 'LOG OUT', logout_path %></li>
