fix link text on map

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -90,7 +90,7 @@
       'lng': lng,
       'zoom' : 15,
       'infoText':'',
-      'linkText':'Here I am!',
+      'linkText':"I'm here!",
       'mapAddress': zip,
       'icon': '/assets/pin-dark.png'
     };  
