add condition statement for collab_wanted to toggle styling of project item image and header, add section name

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -340,9 +340,14 @@ img {
   max-width: 100%;
   min-width: 100%;
 }
+
 .project-language {
-  opacity: .75;
+  opacity: .40;
 }
+.project-language.collaborator-wanted {
+  opacity: .80;
+}
+
 
 .img-rounded {
   border-radius: 6px;
