--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -104,4 +104,28 @@
 .display{
   display:block;
 }    
+
+.project-tile-name {
+  text-transform: uppercase;
+  height: 34px;
+  margin: 0px;
+  background: #000;
+  padding-top: 10px;
+}
+
+.project-tile-status {
+  text-transform: uppercase;
+  height: 27px;
+  font-size: 20px;
+  margin-top: 0px;
+  background: #000;
+  padding-top: 6px;
+  margin-bottom: 0px !important;
+}
+
+.collaborator_wanted{
+  background: #52CCBA;
+}
+
+
     
