minor color and styling changes on user show page

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -342,10 +342,10 @@ img {
 }
 
 .project-language {
-  opacity: .40;
+  opacity: .25;
 }
 .project-language.collaborator-wanted {
-  opacity: .80;
+  opacity: 1;
 }
 
 
