--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -111,6 +111,7 @@
   margin: 0px;
   background: #000;
   padding-top: 10px;
+  color: #AAAAAA;
 }
 
 .project-tile-status {
@@ -125,6 +126,7 @@
 
 .collaborator_wanted{
   background: #52CCBA;
+  color: #FFF;
 }
 
 
