--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -67,7 +67,7 @@
 <!-- ////////////MODAL/////// -->
   <center>
     <% if current_user == @user %>
-      <h1 style='padding-bottom:10px'>>Your Projects</h1>
+      <center><h1 style='padding-bottom:10px'>Your Projects</h1></center>
     <% else %>
       <h1 style='padding-bottom:10px'><%= @user.first_name %>'s Projects</h1>
     <% end %>
