--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,7 +86,6 @@
                     Please give a brief decription of your project below:
                     <%= f.text_field :description, class: 'form-control' %>Describe what your looking for in a collaborator on this project:
                     <%= f.text_field :need_help_with, class: 'form-control' %>
-                    <%#= collection_select(:user, :role_id, @roles, :id, :role_title, {:prompt => true}) %>
                     <%= check_box_tag(:collaborator_wanted, true)%>
                     Open to collaboration!
                     <span class="help-block"></span>
@@ -111,42 +110,59 @@ START PROJECTS ITEM
 
   <% @user.all_projects.each do |project| %>
 
-    <!-- THIS IS WHERE THE ARTICLE ONCE WAS - rip -->
     <article class= "project-item" style='float:left' data-id="<%= project.id %>" >
+
+
+    <% if project.collaborator_wanted %>
       <h2 class='project-tile-name collaborator_wanted'><%= project.name %></h2>
       <h2 class='project-tile-status collaborator_wanted'>HELP WANTED</h2>
-      <% if @language_logos.include?(project.language.downcase) %>
+    <% else %>
+      <h2 class='project-tile-name'><%= project.name %></h2>
+      <h2 class='project-tile-status'></h2>
+    <% end %>
+
+    <% if @language_filters.include?(project.language.downcase) %>
+      <% if project.collaborator_wanted %>
         <img class="img-responsive project-image project-language collaborator-wanted" src='/assets/<%= project.language.downcase %>.png'>
       <% else %>
-        <img class="img-responsive project-image project-language collaborator-wanted" src='/assets/flatiron.png'>
+        <img class="img-responsive project-image project-language" src='/assets/<%= project.language.downcase %>.png'>
       <% end %>
-      <%= link_to project.archive_url do %>
-  
-    <div class="hover-mask">
-      <h2 class="project-title project-tile-header"><%= project.name %></h2><!--Project Title -->
-      <div class='project-description'>
-        <p class='overview'><%=project.description%> </p>
-        <h2 class='project-title project-description-header'>Written In:</h2>
-          <p class='project-languages'> <%=project.language %> </p>
-        <h2 class='project-title project-description-header'>Need Help With:</h2>
-          <p class='need-help'><%=project.need_help_with%> </p>
+    <% else %>
+      <% if project.collaborator_wanted %>
+        <img class="img-responsive project-image project-language collaborator-wanted" src='/assets/flatiron.png'>
+      <% else %>
+        <img class="img-responsive project-image project-language" src='/assets/flatiron.png'>
+      <% end %>
+    <% end %>
+
+
+    <%= link_to project.archive_url do %>
+      <div class="hover-mask">
+        <h2 class="project-title project-tile-header"><%= project.name %></h2><!--Project Title -->
+        <div class='project-description'>
+          <p class='overview'><%=project.description%> </p>
+          <h2 class='project-title project-description-header'>Written In:</h2>
+            <p class='project-languages'> <%=project.language %> </p>
+          <h2 class='project-title project-description-header'>Need Help With:</h2>
+            <p class='need-help'><%=project.need_help_with%> </p>
+        </div>
       </div>
-    </div>
-  <% end %>
-  <% if current_user && current_user == @user %>
-    
-    <a href="#" data-toggle="modal" data-target="#basicModal-<%= project.id %>" >
-      <div class="hover-mask bottom-mask mask-orange">
-        <h2 class='project-title project-description-footer'>Edit</h2>
-      </div>
-    </a>
-  <% else %>
-    <a href="mailto:<%= @user.email %>?subject=Helping Out With <%= project.name %>">
-    <div class="hover-mask bottom-mask">
-      <h2 class='project-title project-description-footer'>Get In Touch!</h2>
-    </div>
-    </a>
-  <% end %>
+    <% end %>
+    <% if current_user && current_user == @user %>
+      
+      <a href="#" data-toggle="modal" data-target="#basicModal-<%= project.id %>" >
+        <div class="hover-mask bottom-mask mask-orange">
+          <h2 class='project-title project-description-footer'>Edit</h2>
+        </div>
+      </a>
+    <% else %>
+      <a href="mailto:<%= @user.email %>?subject=Helping Out With <%= project.name %>">
+      <%#= link_to "mailto:#{@user.email}?" do %>
+        <div class="hover-mask bottom-mask">
+          <h2 class='project-title project-description-footer'>Get In Touch!</h2>
+        </div>
+      </a>
+    <% end %>
   </article>
 
 
