--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -122,8 +122,23 @@ START PROJECTS ITEM
     <% end %>
     <!-- SECTION 1 END -->
 
-   
+    <!-- BROKEN CODE  START -->
+    <% binding.pry %>
+    <% if @language_logos.include?(project.language.downcase) %>
 
+      <% if project.collaborator_wanted %>
+        <img class="img-responsive project-image project-language collaborator-wanted" src='/assets/<%= project.language.downcase %>.png'>
+      <% else %>
+        <img class="img-responsive project-image project-language" src='/assets/<%= project.language.downcase %>.png'>
+      <% end %>
+    <% else %>
+      <% if project.collaborator_wanted %>
+        <img class="img-responsive project-image project-language collaborator-wanted" src='/assets/flatiron.png'>
+      <% else %>
+        <img class="img-responsive project-image project-language" src='/assets/flatiron.png'>
+      <% end %>
+    <% end %>
+        <!-- BROKEN CODE  END-->
 
     <%= link_to project.archive_url do %>
       <div class="hover-mask">
