--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -114,7 +114,7 @@ START PROJECTS ITEM
 
     <!-- SECTION 1 START -->
     <% if project.collaborator_wanted %>
-      <h2 class='project-tile-name collaborator_wanted'><%= project.name %></h2>
+      <center><h2 class='project-tile-name collaborator_wanted'><%= project.name %></h2></center>
       <h2 class='project-tile-status collaborator_wanted'>HELP WANTED</h2>
     <% else %>
       <h2 class='project-tile-name'><%= project.name %></h2>
