--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -112,17 +112,14 @@ START PROJECTS ITEM
 
     <article class= "project-item" style='float:left' data-id="<%= project.id %>" >
 
-    <!-- SECTION 1 START -->
     <% if project.collaborator_wanted %>
       <center><h2 class='project-tile-name collaborator_wanted'><%= project.name %></h2></center>
-      <h2 class='project-tile-status collaborator_wanted'>HELP WANTED</h2>
+      <center><h2 class='project-tile-status collaborator_wanted'>HELP WANTED</h2></center>
     <% else %>
-      <h2 class='project-tile-name'><%= project.name %></h2>
-      <h2 class='project-tile-status'></h2>
+      <center><h2 class='project-tile-name'><%= project.name %></h2></center>
+      <center><h2 class='project-tile-status'></h2></center>
     <% end %>
-    <!-- SECTION 1 END -->
-
-    <!-- BROKEN CODE  START -->
+    
     <% binding.pry %>
     <% if @language_logos.include?(project.language.downcase) %>
 
@@ -138,7 +135,6 @@ START PROJECTS ITEM
         <img class="img-responsive project-image project-language" src='/assets/flatiron.png'>
       <% end %>
     <% end %>
-        <!-- BROKEN CODE  END-->
 
     <%= link_to project.archive_url do %>
       <div class="hover-mask">
