--- a/app/assets/stylesheets/styles-8.css.scss
+++ b/app/assets/stylesheets/styles-8.css.scss
@@ -572,6 +572,10 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 	-webkit-backface-visibility: hidden;
 }
 
+.user-image{
+    height: 366px !important;
+}
+
 #projects-container .project-item.filtered{
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
@@ -605,7 +609,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 .project-item .hover-mask {
     position:absolute;
     padding:0;
-    width:100%;
+    width:101%;
     height:100%;
     top:0;
     left:0;
@@ -626,7 +630,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     margin-bottom: 6px !important;
     margin-left: 25px !important;
     margin-right: auto !important;
-    margin-top: 86.5% !important;
+    margin-top: 91.5% !important;
 }
 .mask-orange{
     background:#F5B133 !important;
