add jquery to project box on collab selection

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -117,6 +117,11 @@
   margin-top:0px !important;
 }
 
+h3.no-margin {
+  font-family: Raleway, Arial, sans-serif !important;
+  font-size: 20px !important;
+}
+
 .project-tile-status {
   text-transform: uppercase;
   height: 27px;
